[package]
name = "rusty_opengl_prog"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Steven Becker <steven.becker@studium.uni-hamburg.de>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
panic = "abort"
