[package]
name = "rusty_opengl_prog"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Steven Becker <steven.becker@studium.uni-hamburg.de>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.34.0"
imgui = "0.12.0"
imgui-glium-renderer = "0.12.0"
imgui-winit-support = "0.12.0"
glutin = "0.31"
glutin-winit = "0.4.2"
winit = "0.29.3"
raw-window-handle = "0.5.0"
nalgebra = "0.33.0"

[build-dependencies]
cc = "1.0.28"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
panic = "abort"
